updates documentation for cookie authentication
